# cynq

./: .gitignore  .pre-commit-config.yaml  README.md  meson.build  meson.options  meson_options.txt
docs/: About.md  ClassDiagram.md  Doxyfile.in  DoxygenLayout.xml  Foundations.md  GettingStarted.md  Installation.md  index.html  meson.build
docs/html/: accelerator_8hpp_source.html  ad08_8hpp_source.html  alveo_2hardware_8hpp_source.html  alveo_2vadd-host_8cpp-example.html  basic-example_8cpp-example.html  classcynq_1_1Alveo.html  classcynq_1_1Alveo__coll__graph.md5  classcynq_1_1Alveo__inherit__graph.map  classcynq_1_1DMADataMover.html  classcynq_1_1DMADataMover__inherit__graph.map  classcynq_1_1DMADataMover__inherit__graph.md5  classcynq_1_1ExecutionStream.html  classcynq_1_1ExecutionStream__coll__graph.md5  classcynq_1_1ExecutionStream__inherit__graph.map  classcynq_1_1IAccelerator.html  classcynq_1_1IAccelerator__inherit__graph.map  classcynq_1_1IAccelerator__inherit__graph.md5  classcynq_1_1IDataMover.html  classcynq_1_1IDataMover__inherit__graph.map  classcynq_1_1IDataMover__inherit__graph.md5  classcynq_1_1IExecutionGraph.html  classcynq_1_1IExecutionGraph__inherit__graph.map  classcynq_1_1IExecutionGraph__inherit__graph.md5  classcynq_1_1IHardware.html  classcynq_1_1IHardware__inherit__graph.map  classcynq_1_1IHardware__inherit__graph.md5  classcynq_1_1IMemory.html  classcynq_1_1IMemory__inherit__graph.map  classcynq_1_1IMemory__inherit__graph.md5  classcynq_1_1MMIOAccelerator.html  classcynq_1_1MMIOAccelerator__inherit__graph.map  classcynq_1_1MMIOAccelerator__inherit__graph.md5  classcynq_1_1UltraScale.html  classcynq_1_1UltraScale__coll__graph.map  classcynq_1_1UltraScale__coll__graph.md5  classcynq_1_1UltraScale__inherit__graph.map  classcynq_1_1UltraScale__inherit__graph.md5  classcynq_1_1XRTAccelerator.html  classcynq_1_1XRTAccelerator__coll__graph.md5  classcynq_1_1XRTAccelerator__inherit__graph.map  (+177 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+42 more)
examples/: README.md  basic-example.cpp  main.cpp  meson.build  use_case.cpp
examples/alveo/: vadd-host.cpp
examples/structures/: execution-stream.cpp
examples/zynq-mpsoc/: ad08-sequential.cpp  ad08-streams.cpp  ad08.cpp  ad08.hpp  basic-example.cpp  matmul.cpp  matrix-multiplication.cpp  xfcolor-detect.cpp  xfopencv-filter2d.cpp  xfopencv-warp-perspective.cpp
include/cynq/: accelerator.hpp  cynq.hpp  datamover.hpp  debug.hpp  enums.hpp  execution-graph.hpp  hardware.hpp  memory.hpp  meson.build  status.hpp
include/cynq/alveo/: hardware.hpp
include/cynq/amd/: accelerator.hpp
include/cynq/dma/: datamover.hpp
include/cynq/execution-graph/: stream.hpp
include/cynq/mmio/: accelerator.hpp  axi-gpio.hpp  meson.build
include/cynq/ultrascale/: hardware.hpp
include/cynq/xrt/: accelerator.hpp  datamover.hpp  memory.hpp
src/: cynq.cpp  meson.build
src/cynq/: accelerator.cpp  datamover.cpp  execution-graph.cpp  hardware.cpp  memory.cpp  meson.build
src/cynq/alveo/: hardware.cpp  meson.build
src/cynq/amd/: accelerator.cpp  meson.build
src/cynq/dma/: datamover.cpp  meson.build
src/cynq/execution-graph/: meson.build  stream.cpp
src/cynq/mmio/: accelerator.cpp  axi-gpio.cpp  meson.build
src/cynq/ultrascale/: hardware.cpp  meson.build
src/cynq/xrt/: accelerator.cpp  datamover.cpp  memory.cpp  meson.build
subprojects/: .gitignore
tests/: meson.build
