#
# See LICENSE for more information about licensing
#  Copyright 2023
#
# Author: Diego Arturo Avila Torres <dandida95@gmail.com>
#         Luis G. Leon Vega <luis.leon@ieee.org>
#
#

option('build-tests', type: 'boolean', value: false, description: 'Enable test compilation')
option('build-docs', type: 'boolean', value: false, description: 'Enable docs compilation')
option('build-docs-only', type: 'boolean', value: false, description: 'Enable docs-only compilation')
option('developer-mode', type : 'boolean', value : true, yield : true, description: 'Enable developer mode')
