#
# See LICENSE for more information about licensing
#  Copyright 2023
#
# Author: Diego Arturo Avila Torres <diego.avila@uned.cr>
#         Luis G. Leon Vega <luis.leon@ieee.org>
#
#

executable('basic-example-kria',
  ['zynq-mpsoc/basic-example.cpp'],
  include_directories: [projectinc],
  cpp_args : cpp_args,
  dependencies : [project_deps, libcynq_dep]
)
