#
# See LICENSE for more information about licensing
#  Copyright 2023
#
# Author: Diego Arturo Avila Torres <dandida95@gmail.com>
#         Luis G. Leon Vega <luis.leon@ieee.org>
#

lib_headers = [
  files('accelerator.hpp'),
  files('cynq.hpp'),
  files('datamover.hpp'),
  files('enums.hpp'),
  files('execution-graph.hpp'),
  files('hardware.hpp'),
  files('memory.hpp'),
  files('status.hpp'),
]

install_headers(lib_headers, subdir : 'cynq')
