#
# See LICENSE for more information about licensing
#  Copyright 2023
#
# Author: Diego Arturo Avila Torres <dandida95@gmail.com>
#         Luis G. Leon Vega <luis.leon@ieee.org>
#

lib_headers = [
  files('accelerator.hpp'),
  files('axi-gpio.hpp'),
]

install_headers(lib_headers, subdir : 'cynq/mmio')
